--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,122 @@
+@import 'colors';
+
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
 .attribution {
 	font-size: 11px;
 	text-align: center;
 
-    a {
-        color: hsl(228, 45%, 44%);
-    }
+	a {
+		color: hsl(228, 45%, 44%);
+	}
+}
+
+body {
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	// align-items: center;
+	background-color: $veryDarkBlue;
+	color: $white;
+	font-size: 15px;
+	font-family: 'Overpass', sans-serif;
+}
+
+.container {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 350px;
+	width: 350px;
+	margin: auto;
+	padding: 25px;
+	border-radius: 15px;
+	background-color: $darkBlue;
+}
+
+.rating {
+	display: none;
+
+	.logo,
+	.circle {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		height: 40px;
+		line-height: 45px;
+		width: 40px;
+		border-radius: 20px;
+		background-color: hsl(216, 12%, 25%);
+	}
+
+	.circle {
+		color: $mediumGrey;
+		transition: 0.2s;
+
+		&:hover {
+			background-color: $orange;
+			color: $white;
+			cursor: pointer;
+		}
+	}
+
+	.text {
+		color: $mediumGrey;
+	}
+
+	.score {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+	}
+
+	.submitBtn {
+		height: 45px;
+		border: transparent;
+		border-radius: 30px;
+		background-color: $orange;
+		text-transform: uppercase;
+		color: $white;
+		letter-spacing: 2px;
+		transition: 0.2s;
+
+		&:hover {
+			background-color: $white;
+			color: $orange;
+			cursor: pointer;
+		}
+	}
+
+	.active {
+		color: $white;
+		background-color: $lightgrey;
+	}
+}
+
+.result {
+	display: none;
+	text-align: center;
+	justify-content: space-around;
+
+	.selected {
+		margin: 0 auto;
+		width: 180px;
+		height: 30px;
+		line-height: 35px;
+		color: $orange;
+		border-radius: 20px;
+		background-color: hsl(216, 12%, 25%);
+	}
+
+	.text {
+		color: $mediumGrey;
+	}
+}
+
+.show {
+	display: flex;
 }
